<resources>
    <string name="app_name">MiAprendizaje</string>
    <string name="Iniciar">Iniciar</string>
    <string name="Bienvenida">Bienvenido a Mi Aprendizaje un juego interactivo que ayuda a desarrolar la mente de los niños</string>
    <string name="IB">info</string>
    <string name="Confi">Configuración</string>
    <string name="sonido">Sonido</string>
    <string name="btnperfil">Editar Perfil</string>
    <string name="Regresar">Regresar</string>
    <string name="idiomas">Idiomas</string>
    <string name="btniniciar">Iniciar</string>
    <string name="hint_Nombre">Nombre</string>
    <string name="btnJugar">Jugar</string>
    <string name="txtComencemos">¡Comencemos!</string>
    <string name="btnNivel1">1</string>
    <string name="btnNivel2">2</string>
    <string name="btnNivel3">3</string>
    <string name="btnNivel4">4</string>
    <string name="btnNivel5">5</string>
    <string name="btnNivel6">6</string>
    <string name="txtEdad">Edad</string>
    <string name="btnRegresar">Regresar</string>
    <string name="btnGuardar">Guardar</string>
    <string name="perfil">Perfil</string>
    <string name="btnanimales">Animales</string>
    <string name="btnColores">Colores</string>
    <string name="IBanimales">Animales</string>
    <string name="sonido_animales">Escucha el sonido de los animales</string>
    <string name="Seleccion">De que color es la imagen</string>
    <string name="IBcolores">Colores</string>
    <string name="btnmate">Matematicas</string>
    <string name="txtvidas">Vidas: 3</string>
    <string name="txtpuntos">Puntos: 0</string>
    <string name="hint_respuesta">Respuesta</string>
    <string name="btnconfirmar">Confirmar</string>
    <string name="txtcorrecto">Correcto</string>
    <string name="txtincorrecto">Incorrecto</string>
    <string name="btnabc">Abecedario</string>
    <string name="btnreiniciar">Reiniciar</string>
    <string name="btnsalir">Salir</string>
    <string name="txtpuntuacion">Puntuación: 0</string>
    <string name="txtpregunta">¿Que animal es este?</string>
    <string name="color1">Azul</string>
    <string name="color2">Morado</string>
    <string name="color3">Verde</string>
    <string name="color4">Rosa</string>
    <string name="txtnombre">¿Como te llamas?</string>
    <string name="label">¿Que animal es este?</string>
    <string name="label3">¿De que color es la imagen?</string>
    <string name="label2">Resuelve la siguiente operación</string>
    <string name="btncolor">Colores</string>
</resources>