<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".Niveles">

    <Button
        android:id="@+id/btn_abecedario"
        android:layout_width="274dp"
        android:layout_height="74dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="479dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="49dp"
        android:text="@string/btnabc"
        app:cornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btn_animales"
        android:layout_width="274dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="481dp"
        android:text="@string/btnanimales"
        app:cornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_Matematicas"
        android:layout_width="274dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="337dp"
        android:text="@string/btnmate"
        app:cornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_colores"
        android:layout_width="274dp"
        android:layout_height="74dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="189dp"
        android:text="@string/btnColores"
        app:cornerRadius="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>